<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InsertActivity">
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_48px"
        android:title="@string/action_save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_lock"
        android:icon="@drawable/ic_lock_48px"
        android:title="@string/action_lock"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_unlock"
        android:icon="@drawable/ic_lock_open_48px"
        android:title="@string/action_unlock"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_colour"
        android:icon="@drawable/ic_color_lens_48px"
        android:title="@string/action_change_colour"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_48px"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_48px"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_exit_to_app_48px"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
</menu>