<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ColourActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_blue"
                android:text="@string/title_blue"
                android:onClick="changeColor"
                android:background="@color/light_blue"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_red"
                android:text="@string/title_red"
                android:onClick="changeColor"
                android:background="@color/light_red"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_yellow"
                android:text="@string/title_yellow"
                android:onClick="changeColor"
                android:background="@color/light_yellow"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_green"
                android:text="@string/title_green"
                android:onClick="changeColor"
                android:background="@color/light_green"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_purple"
                android:text="@string/title_purple"
                android:onClick="changeColor"
                android:background="@color/light_purple"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rb_default"
                android:text="@string/title_default"
                android:onClick="changeColor"
                android:background="@color/white"/>
        </RadioGroup>
    </ScrollView>

</android.support.constraint.ConstraintLayout>